<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="155dp"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/ia_signup_btn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/ia_signup_btn"
        android:text="@string/signup"
        android:textColor="#fff" />

    <Button
        android:id="@+id/ia_login_btn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/ia_login_btn"
        android:text="@string/login"
        android:textColor="@color/primaryColor" />

    <Button
        android:id="@+id/ia_skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/slideViewPager"
        android:background="@drawable/ia_skip_btn"
        android:text="@string/skip"
        android:textColor="#80FFFFFF"
        android:textColorHint="@color/primaryColor"
        android:textSize="12sp" />

</RelativeLayout>