<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="Home"

            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="?android:attr/colorBackground">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="162dp"
                    android:backgroundTint="#FFFFFF"
                    android:foregroundTintMode="screen"
                    android:tintMode="src_over"
                    app:srcCompat="@drawable/car_img9"
                    app:tint="@color/cardview_shadow_start_color" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/trending_builds"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:typeface="normal" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                app:cardBackgroundColor="?android:attr/colorBackground">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="50dp"
                    android:text="@string/home_photos"
                    android:textColor="@color/primaryColor"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/home_coverage"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="270dp"
                    android:text="@string/home_events"
                    android:textSize="12sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:cardBackgroundColor="?attr/colorBackgroundFloating">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    app:srcCompat="@drawable/car_img1" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="232dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/car_img7" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="131dp"
                app:cardBackgroundColor="?android:attr/colorBackground">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="241dp"
                    android:layout_height="158dp"
                    app:srcCompat="@drawable/car_img13" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="174dp"
                    android:layout_height="171dp"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/car_img2" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:cardBackgroundColor="?android:attr/colorBackground">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="199dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/car_img4" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="212dp"
                    android:layout_height="143dp"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/car_img6" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </ScrollView>

</RelativeLayout>